--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "express": "^4.21.1",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
